--- a/tags.html
+++ b/tags.html
@@ -18,6 +18,8 @@
 <section id="content" class="body">
     <h1>Tags for fansonTop</h1>
     <ul>
+        <li><a href="/tag/java.html">java</a> (3)</li>
+        <li><a href="/tag/spring.html">spring</a> (3)</li>
     </ul>
 </section>
 
