--- a/springxue-xi-pian-zhang-yi.html
+++ b/springxue-xi-pian-zhang-yi.html
@@ -13,6 +13,7 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li class="active"><a href="/category/java.html">Java</a></li>
+                    <li><a href="/category/repair.html">repair</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
