--- a/tags.html
+++ b/tags.html
@@ -12,6 +12,7 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">Java</a></li>
+                    <li><a href="/category/repair.html">repair</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -19,7 +20,10 @@
     <h1>Tags for fansonTop</h1>
     <ul>
         <li><a href="/tag/java.html">java</a> (3)</li>
+        <li><a href="/tag/linux.html">linux</a> (1)</li>
+        <li><a href="/tag/macos.html">macos</a> (1)</li>
         <li><a href="/tag/spring.html">spring</a> (3)</li>
+        <li><a href="/tag/windows.html">windows</a> (1)</li>
     </ul>
 </section>
 
