--- a/categories.html
+++ b/categories.html
@@ -13,12 +13,14 @@
                 <nav><ul>
                     <li><a href="/category/java.html">Java</a></li>
                     <li><a href="/category/repair.html">repair</a></li>
+                    <li><a href="/category/temp.html">Temp</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on fansonTop</h1>
     <ul>
         <li><a href="/category/java.html">Java</a> (3)</li>
         <li><a href="/category/repair.html">repair</a> (1)</li>
+        <li><a href="/category/temp.html">Temp</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
