--- a/archives.html
+++ b/archives.html
@@ -13,12 +13,15 @@
                 <nav><ul>
                     <li><a href="/category/java.html">Java</a></li>
                     <li><a href="/category/repair.html">repair</a></li>
+                    <li><a href="/category/temp.html">Temp</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for fansonTop</h1>
 
 <dl>
+    <dt>一 12 四月 2021</dt>
+    <dd><a href="/springxue-xi-pian-zhang-san-temp.html">Spring学习（篇章三）(temp)</a></dd>
     <dt>日 11 四月 2021</dt>
     <dd><a href="/dian-nao-wei-xiu-bu-qiu-ren.html">电脑维修不求人</a></dd>
     <dt>日 11 四月 2021</dt>
