--- a/dian-nao-wei-xiu-bu-qiu-ren.html
+++ b/dian-nao-wei-xiu-bu-qiu-ren.html
@@ -14,6 +14,7 @@
                 <nav><ul>
                     <li><a href="/category/java.html">Java</a></li>
                     <li class="active"><a href="/category/repair.html">repair</a></li>
+                    <li><a href="/category/temp.html">Temp</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
