--- a/springxue-xi-pian-zhang-san-temp.html
+++ b/springxue-xi-pian-zhang-san-temp.html
@@ -36,7 +36,7 @@
         </address>
 <p>In <a href="/category/temp.html">Temp</a>.</p>
 <p>tags: <a href="/tag/java.html">java</a> <a href="/tag/spring.html">spring</a> </p>
-</footer><!-- /.post-info -->      <p>j### 1. 自动装配(autowire)</p>
+</footer><!-- /.post-info -->      <h3>1. 自动装配(autowire)</h3>
 <p>自动装配：不需要显式的为属性注入值，Spring框架会自动的将合适的值注入到属性中！</p>
 <p>自动装配的做法：在Spring的配置文件中，为需要自动装配的<code>&lt;bean&gt;</code>添加<code>autowire</code>属性的配置，该属性的常用取值有：<code>byName</code>、<code>byType</code>。</p>
 <p>当取值为<code>byName</code>时，表示<strong>根据名称实现自动装配</strong>，即要求被注入的属性名称(严格的说，是该属性的规范SET方法名还原出来的属性名)与值的Bean-id是一致的！</p>
