--- a/tags.html
+++ b/tags.html
@@ -19,10 +19,11 @@
 <section id="content" class="body">
     <h1>Tags for fansonTop</h1>
     <ul>
-        <li><a href="/tag/java.html">java</a> (3)</li>
+        <li><a href="/tag/java.html">java</a> (4)</li>
         <li><a href="/tag/linux.html">linux</a> (1)</li>
         <li><a href="/tag/macos.html">macos</a> (1)</li>
         <li><a href="/tag/spring.html">spring</a> (3)</li>
+        <li><a href="/tag/springmvc.html">springMVC</a> (1)</li>
         <li><a href="/tag/windows.html">windows</a> (1)</li>
     </ul>
 </section>
