create the website

--- a/archives.html
+++ b/archives.html
@@ -11,24 +11,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
-                    <li><a href="/category/java.html">Java</a></li>
-                    <li><a href="/category/repair.html">repair</a></li>
+                    <li><a href="/category/java.html">java</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for fansonTop</h1>
 
 <dl>
-    <dt>六 17 四月 2021</dt>
-    <dd><a href="/springmvcxue-xi-pian-zhang-yi.html">SpringMVC学习(篇章一)</a></dd>
-    <dt>日 11 四月 2021</dt>
-    <dd><a href="/dian-nao-wei-xiu-bu-qiu-ren.html">电脑维修不求人</a></dd>
-    <dt>日 11 四月 2021</dt>
-    <dd><a href="/springxue-xi-pian-zhang-san.html">Spring学习（篇章三）</a></dd>
-    <dt>日 11 四月 2021</dt>
-    <dd><a href="/springxue-xi-pian-zhang-er.html">Spring学习（篇章二）</a></dd>
-    <dt>六 03 四月 2021</dt>
-    <dd><a href="/springxue-xi-pian-zhang-yi.html">Spring学习(篇章一)</a></dd>
+    <dt>Thu 02 September 2021</dt>
+    <dd><a href="/javaji-chu.html">java基础</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
