--- a/tags.html
+++ b/tags.html
@@ -11,20 +11,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
-                    <li><a href="/category/java.html">Java</a></li>
-                    <li><a href="/category/repair.html">repair</a></li>
+                    <li><a href="/category/java.html">java</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for fansonTop</h1>
     <ul>
-        <li><a href="/tag/java.html">java</a> (4)</li>
-        <li><a href="/tag/linux.html">linux</a> (1)</li>
-        <li><a href="/tag/macos.html">macos</a> (1)</li>
-        <li><a href="/tag/spring.html">spring</a> (3)</li>
-        <li><a href="/tag/springmvc.html">springMVC</a> (1)</li>
-        <li><a href="/tag/windows.html">windows</a> (1)</li>
+        <li><a href="/tag/base.html">base</a> (1)</li>
+        <li><a href="/tag/java.html">java</a> (1)</li>
     </ul>
 </section>
 
