--- a/authors.html
+++ b/authors.html
@@ -11,15 +11,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
-                    <li><a href="/category/java.html">Java</a></li>
-                    <li><a href="/category/repair.html">repair</a></li>
+                    <li><a href="/category/java.html">java</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on fansonTop</h1>
     <ul>
-        <li><a href="/author/fanson.html">Fanson</a> (5)</li>
+        <li><a href="/author/fanson.html">Fanson</a> (1)</li>
     </ul>
 </section>
 
