--- a/categories.html
+++ b/categories.html
@@ -11,14 +11,12 @@
         <header id="banner" class="body">
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
-                    <li><a href="/category/java.html">Java</a></li>
-                    <li><a href="/category/repair.html">repair</a></li>
+                    <li><a href="/category/java.html">java</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on fansonTop</h1>
     <ul>
-        <li><a href="/category/java.html">Java</a> (4)</li>
-        <li><a href="/category/repair.html">repair</a> (1)</li>
+        <li><a href="/category/java.html">java</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
