--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,8 @@
 <h1>Archives for fansonTop</h1>
 
 <dl>
+    <dt>Sat 04 September 2021</dt>
+    <dd><a href="/javamian-xiang-dui-xiang.html">java面向对象</a></dd>
     <dt>Thu 02 September 2021</dt>
     <dd><a href="/javaji-chu.html">java基础</a></dd>
 </dl>
