--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,8 @@
 <h1>Archives for fansonTop</h1>
 
 <dl>
+    <dt>二 26 十月 2021</dt>
+    <dd><a href="/2021/java-eede-yi-xie-zong-jie.html">java ee的一些总结</a></dd>
     <dt>一 25 十月 2021</dt>
     <dd><a href="/2021/javade-yi-xie-ji-ben-gai-nian.html">java的一些基本概念</a></dd>
     <dt>日 24 十月 2021</dt>
