--- a/tags.html
+++ b/tags.html
@@ -20,9 +20,9 @@
     <ul>
         <li><a href="/tag/base.html">base</a> (1)</li>
         <li><a href="/tag/context.html">context</a> (1)</li>
-        <li><a href="/tag/ee.html">ee</a> (1)</li>
         <li><a href="/tag/java.html">java</a> (4)</li>
         <li><a href="/tag/oop.html">oop</a> (1)</li>
+        <li><a href="/tag/se.html">se</a> (1)</li>
     </ul>
 </section>
 
