--- a/archives.html
+++ b/archives.html
@@ -19,7 +19,7 @@
 
 <dl>
     <dt>二 26 十月 2021</dt>
-    <dd><a href="/2021/java-eede-yi-xie-zong-jie.html">java ee的一些总结</a></dd>
+    <dd><a href="/2021/java-sede-yi-xie-zong-jie.html">java se的一些总结</a></dd>
     <dt>一 25 十月 2021</dt>
     <dd><a href="/2021/javade-yi-xie-ji-ben-gai-nian.html">java的一些基本概念</a></dd>
     <dt>日 24 十月 2021</dt>
