--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,8 @@
 <h1>Archives for fansonTop</h1>
 
 <dl>
+    <dt>周六 30 十月 2021</dt>
+    <dd><a href="/2021/java-sede-ling-yi-xie-zong-jie.html">java se的另一些总结</a></dd>
     <dt>周二 26 十月 2021</dt>
     <dd><a href="/2021/java-sede-yi-xie-zong-jie.html">java se的一些总结</a></dd>
     <dt>周一 25 十月 2021</dt>
