--- a/archives.html
+++ b/archives.html
@@ -18,8 +18,12 @@
 <h1>Archives for fansonTop</h1>
 
 <dl>
+    <dt>周日 31 十月 2021</dt>
+    <dd><a href="/2021/java-fan-she.html">java 反射</a></dd>
     <dt>周六 30 十月 2021</dt>
-    <dd><a href="/2021/java-sede-ling-yi-xie-zong-jie.html">java se的另一些总结</a></dd>
+    <dd><a href="/2021/java-ji-he.html">java 集合</a></dd>
+    <dt>周六 30 十月 2021</dt>
+    <dd><a href="/2021/java-duo-xian-cheng-de-yi-xie-zong-jie.html">java 多线程的一些总结</a></dd>
     <dt>周二 26 十月 2021</dt>
     <dd><a href="/2021/java-sede-yi-xie-zong-jie.html">java se的一些总结</a></dd>
     <dt>周一 25 十月 2021</dt>
