--- a/tags.html
+++ b/tags.html
@@ -19,10 +19,13 @@
     <h1>Tags for fansonTop</h1>
     <ul>
         <li><a href="/tag/base.html">base</a> (1)</li>
+        <li><a href="/tag/collections.html">collections</a> (1)</li>
         <li><a href="/tag/context.html">context</a> (1)</li>
-        <li><a href="/tag/java.html">java</a> (5)</li>
+        <li><a href="/tag/java.html">java</a> (7)</li>
         <li><a href="/tag/oop.html">oop</a> (1)</li>
-        <li><a href="/tag/se.html">se</a> (2)</li>
+        <li><a href="/tag/reflect.html">reflect</a> (1)</li>
+        <li><a href="/tag/se.html">se</a> (1)</li>
+        <li><a href="/tag/thread.html">thread</a> (1)</li>
     </ul>
 </section>
 
