--- a/tags.html
+++ b/tags.html
@@ -12,6 +12,7 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">java</a></li>
+                    <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -21,8 +22,10 @@
         <li><a href="/tag/base.html">base</a> (1)</li>
         <li><a href="/tag/collections.html">collections</a> (1)</li>
         <li><a href="/tag/context.html">context</a> (1)</li>
-        <li><a href="/tag/java.html">java</a> (7)</li>
+        <li><a href="/tag/java.html">java</a> (8)</li>
+        <li><a href="/tag/leetcode.html">leetCode</a> (1)</li>
         <li><a href="/tag/oop.html">oop</a> (1)</li>
+        <li><a href="/tag/python.html">python</a> (1)</li>
         <li><a href="/tag/reflect.html">reflect</a> (1)</li>
         <li><a href="/tag/se.html">se</a> (1)</li>
         <li><a href="/tag/thread.html">thread</a> (1)</li>
