--- a/archives.html
+++ b/archives.html
@@ -12,26 +12,29 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">java</a></li>
+                    <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for fansonTop</h1>
 
 <dl>
-    <dt>周日 31 十月 2021</dt>
+    <dt>日 31 十月 2021</dt>
     <dd><a href="/2021/java-fan-she.html">java 反射</a></dd>
-    <dt>周六 30 十月 2021</dt>
+    <dt>六 30 十月 2021</dt>
     <dd><a href="/2021/java-ji-he.html">java 集合</a></dd>
-    <dt>周六 30 十月 2021</dt>
+    <dt>六 30 十月 2021</dt>
     <dd><a href="/2021/java-duo-xian-cheng-de-yi-xie-zong-jie.html">java 多线程的一些总结</a></dd>
-    <dt>周二 26 十月 2021</dt>
+    <dt>二 26 十月 2021</dt>
     <dd><a href="/2021/java-sede-yi-xie-zong-jie.html">java se的一些总结</a></dd>
-    <dt>周一 25 十月 2021</dt>
+    <dt>一 25 十月 2021</dt>
     <dd><a href="/2021/javade-yi-xie-ji-ben-gai-nian.html">java的一些基本概念</a></dd>
-    <dt>周日 24 十月 2021</dt>
+    <dt>日 24 十月 2021</dt>
     <dd><a href="/2021/javamian-xiang-dui-xiang.html">java面向对象</a></dd>
-    <dt>周四 02 九月 2021</dt>
+    <dt>四 02 九月 2021</dt>
     <dd><a href="/2021/javaji-chu.html">java基础</a></dd>
+    <dt>四 02 九月 2021</dt>
+    <dd><a href="/2021/leetcodeti-mu.html">leetCode题目</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
