--- a/authors.html
+++ b/authors.html
@@ -12,13 +12,14 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">java</a></li>
+                    <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on fansonTop</h1>
     <ul>
-        <li><a href="/author/fanson.html">Fanson</a> (7)</li>
+        <li><a href="/author/fanson.html">Fanson</a> (8)</li>
     </ul>
 </section>
 
