--- a/archives.html
+++ b/archives.html
@@ -12,6 +12,7 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">java</a></li>
+                    <li><a href="/category/mysql.html">mysql</a></li>
                     <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -19,6 +20,8 @@
 <h1>Archives for fansonTop</h1>
 
 <dl>
+    <dt>二 09 十一月 2021</dt>
+    <dd><a href="/2021/mysqljian-jie.html">mysql简介</a></dd>
     <dt>日 31 十月 2021</dt>
     <dd><a href="/2021/java-fan-she.html">java 反射</a></dd>
     <dt>六 30 十月 2021</dt>
