--- a/categories.html
+++ b/categories.html
@@ -12,12 +12,14 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">java</a></li>
+                    <li><a href="/category/mysql.html">mysql</a></li>
                     <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on fansonTop</h1>
     <ul>
         <li><a href="/category/java.html">java</a> (7)</li>
+        <li><a href="/category/mysql.html">mysql</a> (1)</li>
         <li><a href="/category/suan-fa-ti-mu.html">算法题目</a> (1)</li>
     </ul>
         <section id="extras" class="body">
