--- a/tags.html
+++ b/tags.html
@@ -12,6 +12,7 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">java</a></li>
+                    <li><a href="/category/mysql.html">mysql</a></li>
                     <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -22,8 +23,9 @@
         <li><a href="/tag/base.html">base</a> (1)</li>
         <li><a href="/tag/collections.html">collections</a> (1)</li>
         <li><a href="/tag/context.html">context</a> (1)</li>
-        <li><a href="/tag/java.html">java</a> (8)</li>
+        <li><a href="/tag/java.html">java</a> (9)</li>
         <li><a href="/tag/leetcode.html">leetCode</a> (1)</li>
+        <li><a href="/tag/mysql.html">mysql</a> (1)</li>
         <li><a href="/tag/oop.html">oop</a> (1)</li>
         <li><a href="/tag/python.html">python</a> (1)</li>
         <li><a href="/tag/reflect.html">reflect</a> (1)</li>
