--- a/categories.html
+++ b/categories.html
@@ -13,22 +13,16 @@
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
                     <li><a href="/category/java.html">java</a></li>
-                    <li><a href="/category/java_base.html">java_base</a></li>
                     <li><a href="/category/mysql.html">mysql</a></li>
                     <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
-
-<section id="content" class="body">
-    <h1>Categories for fansonTop</h1>
+    <h1>Categories on fansonTop</h1>
     <ul>
         <li><a href="/category/java.html">java</a> (7)</li>
-        <li><a href="/category/java_base.html">java_base</a> (1)</li>
         <li><a href="/category/mysql.html">mysql</a> (1)</li>
         <li><a href="/category/suan-fa-ti-mu.html">算法题目</a> (1)</li>
     </ul>
-</section>
-
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>links</h2>
