2023年第一篇博客

--- a/categories.html
+++ b/categories.html
@@ -12,6 +12,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
+                    <li><a href="/category/ge-ren-ri-zhi.html">个人日志</a></li>
                     <li><a href="/category/java.html">java</a></li>
                     <li><a href="/category/mysql.html">mysql</a></li>
                     <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
@@ -19,6 +20,7 @@
         </header><!-- /#banner -->
     <h1>Categories on fansonTop</h1>
     <ul>
+        <li><a href="/category/ge-ren-ri-zhi.html">个人日志</a> (1)</li>
         <li><a href="/category/java.html">java</a> (7)</li>
         <li><a href="/category/mysql.html">mysql</a> (1)</li>
         <li><a href="/category/suan-fa-ti-mu.html">算法题目</a> (1)</li>
