--- a/tags.html
+++ b/tags.html
@@ -12,6 +12,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
+                    <li><a href="/category/ge-ren-ri-zhi.html">个人日志</a></li>
                     <li><a href="/category/java.html">java</a></li>
                     <li><a href="/category/mysql.html">mysql</a></li>
                     <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
@@ -25,6 +26,7 @@
         <li><a href="/tag/collections.html">collections</a> (1)</li>
         <li><a href="/tag/context.html">context</a> (1)</li>
         <li><a href="/tag/java.html">java</a> (9)</li>
+        <li><a href="/tag/ji-lu.html">记录</a> (1)</li>
         <li><a href="/tag/leetcode.html">leetCode</a> (1)</li>
         <li><a href="/tag/mysql.html">mysql</a> (1)</li>
         <li><a href="/tag/oop.html">oop</a> (1)</li>
@@ -32,6 +34,7 @@
         <li><a href="/tag/reflect.html">reflect</a> (1)</li>
         <li><a href="/tag/se.html">se</a> (1)</li>
         <li><a href="/tag/thread.html">thread</a> (1)</li>
+        <li><a href="/tag/xin-qing.html">心情</a> (1)</li>
     </ul>
 </section>
 
