--- a/archives.html
+++ b/archives.html
@@ -12,6 +12,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">fansonTop</a></h1>
                 <nav><ul>
+                    <li><a href="/category/ge-ren-ri-zhi.html">个人日志</a></li>
                     <li><a href="/category/java.html">java</a></li>
                     <li><a href="/category/mysql.html">mysql</a></li>
                     <li><a href="/category/suan-fa-ti-mu.html">算法题目</a></li>
@@ -21,6 +22,8 @@
 <h1>Archives for fansonTop</h1>
 
 <dl>
+    <dt>三 11 一月 2023</dt>
+    <dd><a href="/2023/2023zhong-qi-wo-de-bo-ke.html">2023重启我的博客</a></dd>
     <dt>五 02 九月 2022</dt>
     <dd><a href="/2022/leetcodeti-mu.html">leetCode题目</a></dd>
     <dt>五 09 十一月 2018</dt>
